# optimal-musical-fingering

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  pre-commit.yaml  tests.yaml
backend/: README.md  pyproject.toml  requirements.txt
backend/assets/midi_files/: test_sample1.mid  test_sample2.mid  test_sample4.mid
backend/src/api/: __init__.py  api.py  get_all_pos_from_notes.py  get_best_pos_from_notes.py  get_pos_from_notes.py  midi2optimal_positions.py
backend/src/autochord/: __init__.py  chord_data.json  name_chord.py
backend/src/instruments/: __init__.py  instrument.py  keyboard_instrument.py  neck_instrument.py
backend/src/music_piece/: __init__.py  arrangement.py  music_piece.py  neck_arrangement.py  piano_roll.py  timed_chord.py
backend/src/music_piece/arrangement/: build_position_graph.py  dijkstra.py  graph.py  neck_arrangement.py
backend/src/positions/: __init__.py  neck_position.py  position.py
backend/src/utils/: __init__.py  constants.py  midi2ascii.py  note2num.py  num2note.py  roman_numerals.py
backend/tests/: conftest.py  test_api.py  test_arrangement_build_position_graph.py  test_arrangement_dijikstra.py  test_arrangement_graph.py  test_autochord.py  test_music_piece.py  test_neck_arrangement.py  test_neck_instrument.py  test_neck_position.py  test_piano_roll.py  test_position.py  test_timed_chord.py  test_utils.py
frontend/: env.js  index.html  main.js
frontend/css/: base.css  components.css  fretboard.css  layout.css  night-mode.css  style.css
frontend/js/: api.js  clearAll.js  drawNeck.js  drawPosition.js  theme.js
frontend/js/MidiOptimalFingering/: clearAllMOF.js  optimalPositionHandler.js  uploadHandler.js
frontend/js/NeckVizualisation/: clearAllNV.js  drawPosition.js  instrumentHandler.js  positionHandler.js
old/genetic_optim/: analyse_saved.py  genetic_loop.py  main_pos_choosing.py
old/instruments/: IKeyboard.py  Instrument.py
old/midi/: MidiObject.py  MidiRoll.py
src/: IKeyboard.py  Instrument.py  MusicPiece.py  MusicSheet.py  MyMidiObject.py  Position.py  exploring_midi.py  functions_list_positions.py  roll.py  roll_update.py
src/display/: DNeck.py
src/genetic_optim/: Individual.py  genetic_loop.py  main.py  main_keyboard_fingering.py  main_pos_choosing.py  utils.py
src/genetic_optim/saved/: fitnesses.npy
src/instruments/: IKeyboard.py  INeck.py
src/midi/: MidiObject.py  MidiRoll.py  MidiTrack.py  MyMidiObject.py  Roll.py  roll_update.py
src/model/: Position.py  neck_position.py
src/model/instrument/: INeck.py  Instrument.py  keyboard_instrument.py  neck_instrument.py
src/rules/: api.py  getPosFromNotes.py  get_pos_from_notes.py  notes2pos.py  test_api.py
src/ui/: main.js  mainUi.py  secondary.py  ui.html
src/utils/: note2num.py  num2note.py  roman_numerals.py
