[project]
name = "optimal-musical-fingering"
version = "1.0.0"
description = "The goal of this project is to provide a web service that can compute the optimal fingering for a given musical piece, taking into account the instrument."
readme = "README.md"
authors = [
  { name = "Eliot CHRISTON", email = "eliot.christon@gmail.com" },
]

requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "fastapi==0.115.14",
  "pretty-midi>=0.2.10",
  "pydantic==2.11.7",
  "requests==2.32.4",
  "uvicorn==0.35",
]
urls.repository = "https://github.com/eliot-christon/optimal-musical-fingering"

[dependency-groups]
dev = [
  "mypy>=1.16.1",
  "pre-commit>=4.2",
  "pylint>=3.3.7",
  "pytest>=8.4.1",
  "ruff>=0.12.2",
  "ty>=0.0.1a13",
  "types-requests>=2.32.4.20250611",
]

[tool.ruff]
line-length = 100

lint.select = [ "ALL" ]
lint.ignore = [
  "C901",    # Too much Complexity: needs refacto
  "COM812",  # Magic comma, handled by ruff-format
  "D2",      # Too precise documentation rules
  "D3",      # Too precise documentation rules
  "D4",      # Too precise documentation rules
  "D104",    # Missing docstring in public package : TODO
  "EM102",   # f-string in exception : not really an error
  "ERA",     # TODO: remove commented code
  "PLR091",  # Too much Complexity: needs refacto
  "PLR2004", # Magic values: needs refacto
  "PT",      # Pytest errors, we use unittest
  "S",       # Too strict rules
  "T20",     # Too strict on print: TODO remove print statements
  "TRY003",  # Too strict on exceptions
]

[tool.pylint.main]

max-line-length = 100
max-positional-arguments = 10
max-args = 10
max-nested-blocks = 10
min-public-methods = 0
max-attributes = 10
max-locals = 20
max-branches = 25
disable = [
  "too-many-statements",
  "too-many-return-statements",
  "too-many-function-args",
  "duplicate-code",
]
unsafe-load-any-extension = true
ignore = [
  ".venv",
]

# mypy is strict for all packages except pretty_midi.
# The following section silences missing type hints errors for pretty_midi only,
# so you keep strict type checking everywhere else.

[[tool.mypy.overrides]]
module = [ "pretty_midi.*" ]
follow_untyped_imports = true
