[project]
name = "optimal-musical-fingering"
version = "1.0.0"
description = "The goal of this project is to provide a web service that can compute the optimal fingering for a given musical piece, taking into account the instrument."
readme = "README.md"
authors = [
  { name = "Eliot CHRISTON", email = "eliot.christon@gmail.com" },
]

requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "fastapi==0.115.14",
  "pydantic==2.11.7",
  "requests==2.32.4",
  "uvicorn==0.35",
]
urls.repository = "https://github.com/eliot-christon/optimal-musical-fingering"

[dependency-groups]
dev = [
  "mypy>=1.16.1",
  "pre-commit>=4.2",
  "pylint>=3.3.7",
  "pytest>=8.4.1",
  "ruff>=0.12.2",
  "ty>=0.0.1a13",
  "types-requests>=2.32.4.20250611",
]

[tool.ruff]
line-length = 100

lint.select = [ "ALL" ]
lint.ignore = [ "COM812", "D", "D203", "D212", "PT", "S", "T201" ]

[tool.pylint.main]

max-line-length = 100
max-positional-arguments = 10
max-args = 10
max-nested-blocks = 10
min-public-methods = 0
max-attributes = 10
max-locals = 20
max-branches = 25
disable = [  ]
unsafe-load-any-extension = true
ignore = [
  ".venv",
]
